[gd_scene load_steps=11 format=2]

[ext_resource path="res://Menus/store/gun_store.gd" type="Script" id=1]
[ext_resource path="res://Menus/resources/bg.jpg" type="Texture" id=2]
[ext_resource path="res://Menus/resources/black_btn.tres" type="StyleBox" id=3]
[ext_resource path="res://hg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Sprites/UI/icons8-sort-right-100.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2

[sub_resource type="DynamicFont" id=5]
size = 28
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.6, 0.6, 0.6, 0.666667 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
shadow_size = 6

[sub_resource type="DynamicFont" id=3]
size = 24
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0, 0, 0, 1 )

[node name="gun_store" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="BG" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.572549 )
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="."]
margin_left = 366.271
margin_top = -0.847713
margin_right = 438.271
margin_bottom = 30.1523
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gun_desc" type="Panel" parent="."]
margin_left = 538.017
margin_top = 345.803
margin_right = 1134.02
margin_bottom = 629.803
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="gun_desc"]
margin_left = 22.0
margin_top = 27.9499
margin_right = 520.0
margin_bottom = 161.95
custom_fonts/font = SubResource( 5 )
text = "efdfdf"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="weapon_types" type="Panel" parent="."]
margin_left = 44.0038
margin_top = 110.0
margin_right = 390.004
margin_bottom = 671.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="weapon_types"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -123.5
margin_top = -185.0
margin_right = 123.5
margin_bottom = 185.0
custom_constants/separation = 30
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="pistol" type="Button" parent="weapon_types/VBoxContainer"]
margin_right = 247.0
margin_bottom = 50.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "PISTOL"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="smg" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 80.0
margin_right = 247.0
margin_bottom = 130.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "SMG"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rifle" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 160.0
margin_right = 247.0
margin_bottom = 210.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "RIFLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="nades" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 240.0
margin_right = 247.0
margin_bottom = 290.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "GRENADES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="armour" type="Button" parent="weapon_types/VBoxContainer"]
margin_top = 320.0
margin_right = 247.0
margin_bottom = 370.0
rect_min_size = Vector2( 100, 50 )
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 3 )
text = "ARMOUR"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="."]
margin_left = 636.866
margin_top = 35.3911
margin_right = 1027.87
margin_bottom = 301.391
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="icon"]
margin_left = 4.0
margin_top = 4.0
margin_right = 387.0
margin_bottom = 262.0
expand = true
stretch_mode = 6

[node name="next_wpn" type="TextureButton" parent="icon"]
margin_left = 391.0
margin_right = 578.0
margin_bottom = 238.0
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="prev_wpn" type="TextureButton" parent="icon"]
margin_right = 187.0
margin_bottom = 238.0
rect_scale = Vector2( -1, 1 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]
[connection signal="pressed" from="weapon_types/VBoxContainer/pistol" to="." method="_on_pistol_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/smg" to="." method="_on_smg_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/rifle" to="." method="_on_rifle_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/nades" to="." method="_on_nades_pressed"]
[connection signal="pressed" from="weapon_types/VBoxContainer/armour" to="." method="_on_armour_pressed"]
[connection signal="pressed" from="icon/next_wpn" to="." method="_on_next_wpn_pressed"]
[connection signal="pressed" from="icon/prev_wpn" to="." method="_on_prev_wpn_pressed"]
